--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
 
   <dependencies>
     <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+    <dependency>
+    <groupId>org.jenkins-ci.plugins</groupId>
+    <artifactId>chromedriver</artifactId>
+    <version>94.0</version>
+</dependency>
 <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
